<resources>
    <string name="app_name">koochita</string>
    <string name="test_for_test">test for test</string>
    <string name="kasb_O_Kar_Toolbar">کسب و کار من</string>
    <string name="entekhab_sayer_kasbokar">انتخاب سایر کسب و کار ها</string>
    <string name="name_eghamat_ghah">نام اقامتگاه</string>
    <string name="hazf">خذف</string>
    <string name="virayes">ویرایش</string>
    <string name="payam">پیام</string>
    <string name="name_otagh_banner">نام اتاق :</string>
    <string name="name_eghamatghah_banner">نام اقامتگاه</string>
    <string name="tedad_banner">تعداد:</string>
    <string name="do_otagh_banner">دو اتاق</string>
    <string name="vaziyat_rezerv_rezerv_mainactivity">وضعیت رزرو آنی</string>
    <string name="text_rezerv_main">در صورت روشن نمودن این امکان بدون پرسش از شما، میمانان می توانند اقدام به رزرو نمایند. توجه نمایید لازمه این امر استفاده از گزینه اعلام مسافر در هر زمانی است که مسافر جدیدی دارید. روشن نمودن امکان رزرو آنی امتیازات ویژه ای برای شما به ارمغان می آرود. بیشتر بدانید</string>
    <string name="tedad_mosafer_main">تعداد مسافر امروز: 20 نفر</string>
    <string name="vaziyat_otagh_main">وضعیت امروز اتاق ها</string>
    <string name="bishtar">بیشتر</string>
    <string name="sabehe_pishnahad">سابقه پیشنهادها</string>
    <string name="shekayat_az_mosafer">شکایت از مسافر</string>
    <string name="elan_hozor_mosafer">اعلان حضور مسافر</string>
    <string name="vaziyat_gheymat_va_takhfif">وضعیت تخفیف ها و قیمت ها</string>
    <string name="gheymat_nafar_ezafe">قیمت نفر اضافه</string>
    <string name="gheymat_paye">قیمت پایه</string>
    <string name="elane_takhfif">اعلان تخفیف</string>
    <string name="modiriyat_otagh">مدیریت اتاق ها</string>
    <string name="hesabdari">حسابداری</string>
    <string name="modiriyat">مدیریت</string>
    <string name="safhe_man_dar_kkoochita">صفحه من در کوچیتا</string>
    <string name="moshahede">مشاهده</string>
    <string name="emtiyaz">امنیاز</string>
    <string name="tedad_naghd">تعداد نقد</string>
    <string name="tedad_soal">تعداد سوال</string>
    <string name="tedad_payam">تعداد پیام</string>
    <string name="tedad_bazdid">تعداد بازدید</string>
    <string name="shomare_yek">شماره یک</string>
    <string name="vaziyat_panj_roze">وضعیت پنج روزه</string>
    <string name="gheymat_emruz">قیمت امروز</string>
    <string name="emale_takhfif">شما در حال اعمال سریع تخفیف هستید</string>
    <string name="darsad_takhfif">درصد تخفیف را وارد نمایید</string>
    <string name="ya_darcad_takhfif">یا درصد تخفیف را وارد کنید</string>
    <string name="geymate_paye_toman">قیمت پایه(تومان)</string>
    <string name="baze_takhfif">بازه تخفیف</string>
    <string name="az">از</string>
    <string name="tarikh">تاریخ</string>
    <string name="ta">تا</string>
    <string name="tanzimat_Bishtar">تنظیمات بیشتر</string>
    <string name="darKodam_otahHa_emal_shavad">در کدام اتاق ها اعمال شود؟</string>
    <string name="hame">همه</string>
    <string name="emal">اعمال</string>
    <string name="badan">بعدا</string>
    <string name="jost_o_joye_otagh">جست و جوی اتاق</string>
    <string name="name_otagh">نام اتاق</string>
    <string name="elame_mosafer">اعلام مسافر</string>
    <string name="joziyat_mosafer_vared_konid">جزیٔیات مسافر را وارد کنید</string>
    <string name="name">نام</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="tarikh_vorood">تاریخ ورود</string>
    <string name="tarikh_khoroj">تاریخ خروج</string>
    <string name="taghvim_kasbO_Kar">تقویم کسب و کار</string>
    <string name="title_activity_taghvim__kasb_okar_">Taghvim_KasbOkar_Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_emroz">امروز</string>
    <string name="tab_farda">فردا</string>
    <string name="tab_joziyat">جزییات</string>
    <string name="tab_mahiyane">ماهیانه</string>
    <string name="tab_pas_farda">پس فردا</string>
    <string name="tab_tarikh_bar_asas_taghvim">تاریخ بر اساس تقویم</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="tab_text_4">Tab 4</string>
    <string name="tab_text_5">Tab 5</string>
    <string name="title_activity_table_fragmen">tableActivityFragmen</string>
    <string name="shanbe">شنبه</string>
    <string name="tedad_mosaferan">تعداد مسافران امروز</string>
    <string name="_16">16 نفر</string>
    <string name="zarfiyat_khali">ظرفیت خالی</string>
    <string name="_25">25 نفر</string>
    <string name="darAmad">درآمد</string>
    <string name="otagh_por">اتاق های پر</string>
    <string name="otagh_khali">نام اتاق های خالی</string>
    <string name="moshahede_hame">مشاهده همه</string>
    <string name="title_activity_main_fragment">MainFragment</string>
    <string name="name_mosafer">تام مسافر</string>
    <string name="tedad">تعداد</string>
    <string name="saat_orod">ساعت ورود</string>
    <string name="mabda_vorood">مبدا ورود</string>
    <string name="saat_khoroj">ساعت خروج</string>
    <string name="ersal_payam">ارسال پیام</string>
    <string name="shekayat">شکایت</string>
    <string name="title_activity_main_fragment_taghvim_kasb_okar2">
        MainActivityFragmentTaghvimKasbOkar2
    </string>
    <string name="mosafer">مسافر</string>
    <string name="khali">خالی</string>
    <string name="yek_shanbe">یک شنبه</string>
    <string name="shabake_ejtemai">شبکه های اجتماعی</string>
    <string name="sayt_haye_digar">سایت های دیگر</string>
    <string name="telefony">تلفنی</string>
    <string name="hozory">حضوری</string>
    <string name="otagh">اتاق</string>
    <string name="title_activity_fragment__list__mosaferan">Fragment_List_Mosaferan</string>
    <string name="dalil_aval">دلیل اول</string>
    <string name="tedad_sahab_eghamat">تعداد شب اقامت</string>
    <string name="title_activity_fragment_calender">FragmentCalender</string>
</resources>