<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_XD_Dark">

    <RelativeLayout
        android:id="@+id/relativeLayout8"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:layout_marginTop="50dp"
        android:background="#B4C0CC"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp" />


    <androidx.cardview.widget.CardView
        android:id="@+id/viesws"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="12dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/circleImagess"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:alpha="0.4"
            android:background="#EFEFEF"
            android:scaleType="centerCrop"
            android:src="@drawable/keshti_banner" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/iransans"
        android:text="@string/name_otagh"
        android:textColor="#555555"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/viesws"
        app:layout_constraintEnd_toStartOf="@+id/viesws"
        app:layout_constraintTop_toTopOf="@+id/viesws" />

    <TextView
        android:id="@+id/textView61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/iransans"
        android:text="@string/name_mosafer"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout8"
        app:layout_constraintTop_toBottomOf="@+id/viesws" />

    <TextView
        android:id="@+id/textView62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/iransans"
        android:text="@string/tedad"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView61"
        app:layout_constraintTop_toBottomOf="@+id/textView61" />

    <TextView
        android:id="@+id/textView64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/iransans"
        android:text="@string/saat_orod"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView62"
        app:layout_constraintTop_toBottomOf="@+id/textView62" />

    <TextView
        android:id="@+id/textView65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/iransans"
        android:text="@string/mabda_vorood"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView62"
        app:layout_constraintEnd_toStartOf="@+id/textView62"
        app:layout_constraintTop_toTopOf="@+id/textView62" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/iransans"
        android:text="@string/saat_khoroj"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView64"
        app:layout_constraintEnd_toEndOf="@+id/textView65"
        app:layout_constraintTop_toBottomOf="@+id/textView62" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:elevation="12dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout8"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout8">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:alpha="0.4"
            android:background="#EFEFEF"
            android:scaleType="centerCrop"
            android:src="@drawable/keshti_banner" />


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button10"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/color_XD_Dark"
        android:text="@string/ersal_payam"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout8"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/color_XD_Dark"
        android:text="@string/shekayat"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout8"
        app:layout_constraintTop_toBottomOf="@+id/button10" />


</androidx.constraintlayout.widget.ConstraintLayout>