<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layoutDirection="ltr"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#445565"
    android:orientation="vertical">

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/iransans"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/emale_takhfif"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/iransans"
        android:gravity="center"
        android:text="@string/darsad_takhfif"
        android:textColor="#B4C0CC"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />


    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/iransans"
        android:text="درصد تخفیف"
        android:textColor="@color/red_XD"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView77"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/iransans"
        android:text="%"
        android:textColor="@color/red_XD"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt1" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="2dp"
        android:background="@color/red_XD"
        app:layout_constraintTop_toBottomOf="@+id/txt1" />


    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/iransans"
        android:gravity="center"
        android:text="@string/ya_darcad_takhfif"
        android:textColor="#B4C0CC"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />


    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/iransans"
        android:text="@string/geymate_paye_toman"
        android:textColor="@color/red_XD"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />


    <View
        android:id="@+id/view5"
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@color/red_XD"
        app:layout_constraintEnd_toEndOf="@+id/textView33"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />


    <TextView

        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="10dp"

        android:fontFamily="@font/iransans"
        android:text="@string/gheymat_nafar_ezafe"
        android:textColor="@color/red_XD"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView33"
        app:layout_constraintEnd_toStartOf="@+id/textView38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView33" />


    <View

        android:id="@+id/view9"
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@color/red_XD"
        app:layout_constraintEnd_toEndOf="@+id/textView34"
        app:layout_constraintStart_toStartOf="@+id/textView34"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/iransans"
        android:gravity="center"
        android:text="@string/baze_takhfif"
        android:textColor="#B4C0CC"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/iransans"
        android:gravity="center"
        android:text="@string/az"
        android:textColor="#B4C0CC"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/iransans"
        android:text="@string/tarikh"
        android:textColor="@color/red_XD"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/view6"
        app:layout_constraintEnd_toEndOf="@+id/view6" />

    <View
        android:id="@+id/view6"
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:layout_marginEnd="15dp"
        android:background="@color/red_XD"
        app:layout_constraintBottom_toBottomOf="@+id/textView36"
        app:layout_constraintEnd_toStartOf="@+id/textView36"
        app:layout_constraintTop_toTopOf="@+id/textView36" />


    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/iransans"
        android:gravity="center"
        android:text="@string/ta"
        android:textColor="#B4C0CC"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView36"
        app:layout_constraintEnd_toStartOf="@+id/view6"
        app:layout_constraintTop_toTopOf="@+id/textView36" />


    <TextView
        android:id="@+id/textView71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/iransans"
        android:text="@string/tarikh"
        android:textColor="@color/red_XD"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/view7"
        app:layout_constraintEnd_toEndOf="@+id/view7" />

    <View
        android:id="@+id/view7"
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/red_XD"
        app:layout_constraintBottom_toBottomOf="@+id/textView38"
        app:layout_constraintEnd_toStartOf="@+id/textView38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView38" />


    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/iransans"
        android:text="@string/tanzimat_Bishtar"
        android:textColor="@color/yellow_XD"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/view7" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_down"
        app:layout_constraintBottom_toBottomOf="@+id/textView39"
        app:layout_constraintEnd_toStartOf="@+id/textView39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView39" />


    <View
        android:id="@+id/view8"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="25dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/textView39" />


    <TextView

        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/iransans"
        android:text="@string/darKodam_otahHa_emal_shavad"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view8" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView40"
        tools:layout_editor_absoluteX="10dp">

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:buttonTint="@color/white"
            android:checked="true"
            android:fontFamily="@font/iransans"
            android:layoutDirection="rtl"
            android:text="@string/otagh"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:buttonTint="@color/white"
            android:checked="true"
            android:fontFamily="@font/iransans"
            android:layoutDirection="rtl"
            android:text="@string/otagh"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:buttonTint="@color/white"
            android:checked="true"
            android:fontFamily="@font/iransans"
            android:layoutDirection="rtl"
            android:text="@string/hame"
            android:textColor="@color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_emal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/transparent_bg_bordered_button"


        android:fontFamily="@font/iransans"
        android:text="@string/emal"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_Badan"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <Button
        android:id="@+id/btn_Badan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent_bg_bordered_button"
        android:fontFamily="@font/iransans"
        android:text="@string/badan"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_emal"
        app:layout_constraintEnd_toStartOf="@+id/btn_emal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_emal" />


</androidx.constraintlayout.widget.ConstraintLayout>